# cpliceai

./: .gitignore  CMakeLists.txt  README.md  cpliceai.pc
models/spliceai1/: fingerprint.pb  saved_model.pb
models/spliceai1/variables/: variables.data-00000-of-00001  variables.index
models/spliceai2/: fingerprint.pb  saved_model.pb
models/spliceai2/variables/: variables.data-00000-of-00001  variables.index
models/spliceai3/: fingerprint.pb  saved_model.pb
models/spliceai3/variables/: variables.data-00000-of-00001  variables.index
models/spliceai4/: fingerprint.pb  saved_model.pb
models/spliceai4/variables/: variables.data-00000-of-00001  variables.index
models/spliceai5/: fingerprint.pb  saved_model.pb
models/spliceai5/variables/: variables.data-00000-of-00001  variables.index
src/: cpliceai.c  cpliceai.c.bckp  predict.c  predict.h  range.c  range.h  utils.c  utils.h
